src/objects/BHAT_Activity_Code__c.object
<CustomObject>
    <description>List of Activities</description>
    <fields>
        <fullName>Activity_Code_Category__c</fullName>
        <description>Activity Code Category</description>
        <label>Activity Code Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>Time Off</fullName>
                </value>
                <value>
                    <fullName>Overtime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chargeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chargeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Activity_Name__c</fullName>
        <formula>Name + &apos;-&apos;+  Short_Description__c</formula>
        <label>Full Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <description>Long Description</description>
        <inlineHelpText>Long Description</inlineHelpText>
        <label>Long Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Short Description</description>
        <inlineHelpText>Short Description</inlineHelpText>
        <label>Short Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>BHAT Activity Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Activity_Code_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BHAT Activity Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BHAT Activity Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>